// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeprecatedTableCell Component > should match a snapshot with full props 1`] = `
<DocumentFragment>
  <div
    class="foo-bar el-table-cell-has-dark-text el-table-narrow-cell-is-full-width el-table-cell-narrow-order1 el-deprecated-table-cell"
  >
    add
    <div
      class="mocked-styled-10 el-deprecated-table-cell-content"
      data-narrow-label="Label"
    />
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTableCell Component > should match a snapshot with no props 1`] = `
<DocumentFragment>
  <div
    class="el-table-cell-has-dark-text el-deprecated-table-cell"
  >
    <div
      class="mocked-styled-10 el-deprecated-table-cell-content"
    />
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTableHeader Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-deprecated-table-header"
  />
</DocumentFragment>
`;

exports[`DeprecatedTableHeadersRow Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-deprecated-table-headers-row"
  />
</DocumentFragment>
`;

exports[`DeprecatedTableRow Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-deprecated-table-row"
  />
</DocumentFragment>
`;

exports[`DeprecatedTableRowContainer Component > should match a snapshot when not open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-deprecated-table-row-container"
  />
</DocumentFragment>
`;

exports[`DeprecatedTableRowContainer Component > should match a snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-deprecated-table-row-container"
  />
</DocumentFragment>
`;

exports[`TableCellSplit Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-5 el-table-cell-split-wrap"
  >
    <div
      class="mocked-styled-6 el-table-cell-split-data"
    >
      Some Data
    </div>
    <div
      class="mocked-styled-7 el-table-cell-split-sub-data"
    >
      Some Longer Sub Data
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableCtaTriggerCell Component > should match a snapshot with children and no icon 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-table-cta-cell"
    role="button"
    tabindex="0"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableCtaTriggerCell Component > should match a snapshot with no children and an icon 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-table-cta-cell"
    role="button"
    tabindex="0"
  >
    <div
      class="mocked-styled-11 el-table-cta-icon-container"
    >
      add
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableCtaTriggerCell Component > should match a snapshot with no children and no icon 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-table-cta-cell"
    role="button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`TableExpandableRow Component > should match a snapshot when not open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-table-expandable-row"
  >
    <div
      class="mocked-styled-13 el-table-expandable-container"
    />
  </div>
</DocumentFragment>
`;

exports[`TableExpandableRow Component > should match a snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-table-expandable-row"
  >
    <div
      class="mocked-styled-13 el-table-expandable-container"
    />
  </div>
</DocumentFragment>
`;

exports[`TableExpandableRowTriggerCell Component > should match a snapshot with children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-8 el-table-expandable-row-trigger-cell"
    role="button"
    tabindex="0"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableExpandableRowTriggerCell Component > should match a snapshot with no children and closed 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-8 el-table-expandable-row-trigger-cell"
    role="button"
    tabindex="0"
  >
    <svg
      class="el-icon"
      color="inherit"
      data-size="100%"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`TableExpandableRowTriggerCell Component > should match a snapshot with no children and open 1`] = `
<DocumentFragment>
  <div
    class="el-table-narrow-cell-is-full-width el-table-expandable-row-trigger-cell"
    role="button"
    tabindex="0"
  >
    <svg
      class="el-icon"
      color="inherit"
      data-size="100%"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
      />
    </svg>
  </div>
</DocumentFragment>
`;
